Add APIs for loading rooms of branch, branches of cinema, pagination utils
