# main/api-docs/swagger.yaml
@@ -506,6 +506,30 @@ paths:
           description: "Invalid ID supplied"
         404:
           description: "Cinema branch not found"
+  /cinemaBranches/cinema/{id}:
+    get:
+      tags:
+      - "cinemaBranches"
+      summary: "Get cinema's branches by cinema ID"
+      description: ""
+      operationId: "getCinemaBranchByCinemaId"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "The ID that needs to be fetched. Use branch1 for testing. "
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "Successful operation"
+          schema:
+            $ref: "#/definitions/CinemaBranch"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Cinema branch not found"
 
   /rooms:
     post:
@@ -599,6 +623,30 @@ paths:
         required: true
         type: "string"
       responses:
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Room not found"
+  /rooms/branch/{id}:
+    get:
+      tags:
+      - "rooms"
+      summary: "Get rooms by cinema branch ID"
+      description: ""
+      operationId: "getRoomyByCinenaBranchId"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "The ID that needs to be fetched. Use room for testing. "
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "Successful operation"
+          schema:
+            $ref: "#/definitions/Room"
         400:
           description: "Invalid ID supplied"
         404:
